# YOLOv8-PyTorch

./: .gitignore  README.md  pyproject.toml  test.py
configs/: base.yaml
configs/COCO-Detection/: base.yaml  nano.yaml  yolov8n-ours.yaml  yolov8n.yaml
configs/COCO-Segment/: yolov8n.yaml
test/: test_model.py
tools/detection/: train.py
ultralytics/engine/: exporter.py  model.py  trainer.py
ultralytics/models/yolo/: model.py
ultralytics/nn/: __init__.py  tasks.py
ultralytics/utils/: __init__.py  seed.py
ultralytics/utils/callbacks/: comet.py
yolov8/models/: __init__.py  _utils.py  base_model.py  detect_model.py  yolov8.py
yolov8/models/module/: blocks.py  conv.py  head.py  losses.py  neck.py
yolov8/utils/: common.py  metrics.py  misc.py  ops.py
yolov8_pytorch/: __init__.py
yolov8_pytorch/cfg/: __init__.py
yolov8_pytorch/cfg/datasets/: Argoverse.yaml  DOTAv2.yaml  GlobalWheat2020.yaml  VOC.yaml  (+15 more)
yolov8_pytorch/data/: __init__.py  annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  transform.py  utils.py
yolov8_pytorch/engine/: __init__.py  base.py  base_model.py  exporter.py  inferencer.py  model.py  predict.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
yolov8_pytorch/hub/: __init__.py  auth.py  session.py  utils.py
yolov8_pytorch/models/: __init__.py  base_model.py  detect_model.py  yolo.py
yolov8_pytorch/nn/: __init__.py  autobackend.py  tasks.py
yolov8_pytorch/solutions/: ai_gym.py  heatmap.py  object_counter.py
yolov8_pytorch/trackers/: README.md  track.py
yolov8_pytorch/utils/: __init__.py  autobatch.py  benchmarks.py  checks.py  common.py  downloads.py  errors.py  files.py  instance.py  loss.py  metrics.py  misc.py  ops.py  plotting.py  profile.py  results.py  torch_utils.py  tuner.py  visualizer.py
yolov8_pytorch_old/data/: transform.py
yolov8_pytorch_old/engine/: base.py  predict.py
yolov8_pytorch_old/models/: __init__.py  base_model.py  detect_model.py  utils.py  yolo.py
yolov8_pytorch_old/utils/: __init__.py  common.py  files.py  misc.py  ops.py  profile.py  results.py  visualizer.py
(+104 files in other folders)
